# Investigating-ML-Based-Solutions-for-SSD-Caching

./: BALEEN.sh  MAT.sh  README.md  baleen_bundle_202508_RegionMine.tgz  convert_to_baleen.py  install.sh
LRU_Baleen/: CMakeLists.txt  trace_replay.cpp
LRU_always/: CMakeLists.txt  trace_replay.cpp
LRU_rejecct/: trace_replay.cpp  trace_replay_noOSY.cpp
MAT_always/: CMakeLists.txt  trace_replay.cpp
TinyLFU_always/: CMakeLists.txt  trace_replay.cpp  trace_replay_noOSY.cpp
TinyLFU_reject/: trace_replay.cpp  trace_replay_noOSY.cpp
